syntax = "proto3";

package sea.api.date;
import "google/protobuf/descriptor.proto";
import "api/protoapi-spec/types/error.proto";

option go_package = "github.com/kaydxh/sea/api/protoapi-spec/date;date";

service DateService {
  // 生成当前时间
  rpc Now(NowRequest) returns (NowResponse) {};
  rpc NowError(NowErrorRequest) returns (NowErrorResponse) {};
}

message NowRequest {
  string request_id = 1 [json_name = "RequestId"];  //请求ID
}

message NowResponse {
  string request_id = 1 [json_name = "RequestId"];  // 请求ID
  string date = 2 [json_name = "Date"];             //当前时间
  types.Error error = 1000 [json_name = "Error"];
}

message NowErrorRequest {
  string request_id = 1 [json_name = "RequestId"];  //请求ID
}

message NowErrorResponse {
  string request_id = 1 [json_name = "RequestId"];  // 请求ID
  string date = 2 [json_name = "Date"];             //当前时间
  types.Error error = 1000 [json_name = "Error"];
}
